--- a/src/main/resources/templates/article_list.html
+++ b/src/main/resources/templates/article_list.html
@@ -1,15 +1,21 @@
-<table>
-    <thead>
-        <tr>
-            <th>제목</th>
-            <th>작성 일시</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr th:each="article : ${articleList}">
-            <td> <a th:href="@{|/article/detail/${article.id}|}" th:text="${article.title}"></a></td>
-            <td th:text="${article.createDate}"></td>
-        </tr>
-    </tbody>
-    <a th:href="@{/article/create}">등록</a>
-</table>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+<div class="container my-3">
+    <table class="table">
+        <thead class="table-dark">
+            <tr>
+                <th>번호</th>
+                <th>제목</th>
+                <th>작성 일시</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="article : ${articleList}">
+                <td th:text="${article.id}"></td>
+                <td> <a th:href="@{|/article/detail/${article.id}|}" th:text="${article.title}"></a></td>
+                <td th:text="${article.createDate}"></td>
+            </tr>
+        </tbody>
+        <a th:href="@{/article/create}" class="btn btn-primary">Article 등록</a>
+    </table>
+</div>
