--- a/src/main/resources/templates/article_detail.html
+++ b/src/main/resources/templates/article_detail.html
@@ -14,7 +14,12 @@
             <div class="my-3">
                 <a th:href="@{|/article/modify/${article.id}|}" class="btn btn-sm btn-outline-secondary"
                    th:text="수정"></a>
+                <a onclick="return confirm('정말 삭제하시겠습니까 ?')"
+                   th:href="@{|/article/delete/${article.id}|}"
+                   class="delete btn btn-sm btn-outline-secondary"
+                   th:text="삭제"></a>
             </div>
+
         </div>
     </div>
     <a th:href="@{/article/list}" class="btn btn-primary" th:text="목록"></a>
