--- a/src/main/resources/templates/article_detail.html
+++ b/src/main/resources/templates/article_detail.html
@@ -1,26 +1,26 @@
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-<div class="container my-3">
-    <!-- 질문 -->
-    <h2 class="border-bottom py-2" th:text="${article.title}"></h2>
-    <div class="card my-3">
-        <div class="card-body">
-            <div class="card-text" style="white-space: pre-line;" th:text="${article.content}"></div>
-            <div class="d-flex justify-content-end">
-                <div class="badge bg-light text-dark p-2 text-start">
-                    <div th:text="${#temporals.format(article.createDate, 'yyyy-MM-dd HH:mm')}"></div>
+<html layout:decorate="~{layout}">
+    <div layout:fragment="content" class="container my-3">
+        <!-- 질문 -->
+        <h2 class="border-bottom py-2" th:text="${article.title}"></h2>
+        <div class="card my-3">
+            <div class="card-body">
+                <div class="card-text" style="white-space: pre-line;" th:text="${article.content}"></div>
+                <div class="d-flex justify-content-end">
+                    <div class="badge bg-light text-dark p-2 text-start">
+                        <div th:text="${#temporals.format(article.createDate, 'yyyy-MM-dd HH:mm')}"></div>
+                    </div>
                 </div>
-            </div>
-            <div class="my-3">
-                <a th:href="@{|/article/modify/${article.id}|}" class="btn btn-sm btn-outline-secondary"
-                   th:text="수정"></a>
-                <a onclick="return confirm('정말 삭제하시겠습니까 ?')"
-                   th:href="@{|/article/delete/${article.id}|}"
-                   class="delete btn btn-sm btn-outline-secondary"
-                   th:text="삭제"></a>
-            </div>
+                <div class="my-3">
+                    <a th:href="@{|/article/modify/${article.id}|}" class="btn btn-sm btn-outline-secondary"
+                       th:text="수정"></a>
+                    <a onclick="return confirm('정말 삭제하시겠습니까 ?')"
+                       th:href="@{|/article/delete/${article.id}|}"
+                       class="delete btn btn-sm btn-outline-secondary"
+                       th:text="삭제"></a>
+                </div>
 
+            </div>
         </div>
+        <a th:href="@{/article/list}" class="btn btn-primary" th:text="목록"></a>
     </div>
-    <a th:href="@{/article/list}" class="btn btn-primary" th:text="목록"></a>
-</div>
+</html>
