--- a/src/main/resources/templates/article_form.html
+++ b/src/main/resources/templates/article_form.html
@@ -2,6 +2,7 @@
 <div layout:fragment="content" class="container">
     <h5 class="my-3 border-bottom pb-2">질문등록</h5>
     <form th:object="${articleForm}" method="post">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <div class="mb-3">
             <label for="title" class="form-label">제목</label>
             <input type="text" th:field="*{title}" class="form-control">
