--- a/src/main/resources/templates/article_list.html
+++ b/src/main/resources/templates/article_list.html
@@ -1,5 +1,6 @@
 <html layout:decorate="~{layout}">
 <div layout:fragment="content" class="container my-3">
+
     <table class="table">
         <thead class="table-dark">
             <tr>
@@ -9,7 +10,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr th:each="article : ${articleList}">
+            <tr th:each="article : ${paging}">
                 <td th:text="${article.id}"></td>
                 <td> <a th:href="@{|/article/detail/${article.id}|}" th:text="${article.title}"></a></td>
                 <td th:text="${article.createDate}"></td>
@@ -17,5 +18,28 @@
         </tbody>
         <a th:href="@{/article/create}" class="btn btn-primary">Article 등록</a>
     </table>
+    <!-- 페이징처리 시작 -->
+    <div th:if="${!paging.isEmpty()}">
+        <ul class="pagination justify-content-center">
+            <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'">
+                <a class="page-link"
+                   th:href="@{|?page=${paging.number-1}|}">
+                    <span>이전</span>
+                </a>
+            </li>
+            <li th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
+                th:if="${page >= paging.number-5 and page <= paging.number+5}"
+                th:classappend="${page == paging.number} ? 'active'"
+                class="page-item">
+                <a th:text="${page}" class="page-link" th:href="@{|?page=${page}|}"></a>
+            </li>
+            <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
+                <a class="page-link" th:href="@{|?page=${paging.number+1}|}">
+                    <span>다음</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+    <!-- 페이징처리 끝 -->
 </div>
 </html>
